@@ -1,6 +1,12 @@
 # ChangeLog for games-misc/opengfx
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-misc/opengfx/ChangeLog,v 1.7 2010/10/15 13:51:54 maekke Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-misc/opengfx/ChangeLog,v 1.8 2011/05/04 17:23:31 mr_bones_ Exp $
+
+*opengfx-0.3.3 (04 May 2011)
+
+  04 May 2011; Michael Sterrett <mr_bones_@gentoo.org>
+  +opengfx-0.3.3.ebuild:
+  version bump (bug #365961) submitted by Locke Shinseiko
 
   15 Oct 2010; Markus Meier <maekke@gentoo.org> opengfx-0.2.4.ebuild:
   add ~arm, bug #316003
